--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 /* Global */
 :root {
     --drak-blue: #363f5f;
+    --green: #49aa26;
+    --light-green: #3dd705;
+    --red: #e92929; 
 }
 
 * {
@@ -9,9 +12,25 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 93.75%; /* 15px */
+}
+
 body{
     background: #f0f2f5;
     font-family: 'Poppins', sans-serif;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
 }
 
 .container{
@@ -25,6 +44,51 @@ h2 {
     margin-bottom: 0.8rem;
     color: var(--drak-blue);
     font-weight: normal;
+}
+
+/* Links and Buttons */
+a {
+    color: var(--green);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--light-green);
+}
+
+button {
+    width: 100%;
+    height: 50px;
+    border: none;
+    color: white;
+    background: var(--green);
+    padding: 0;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+button:hover {
+    background: var(--light-green);
+}
+
+.button.new {
+    margin-bottom: .8rem;
+    display: inline-block;
+}
+
+.button.cancel {
+    color: var(--red);
+    border: 2px solid var(--red);
+    border-radius: 0.25rem;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
 }
 
 /* Header */
@@ -49,6 +113,12 @@ header {
     margin-top: 0;
 }
 
+#transaction {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
 /* Cards */
 .card {
     background: white;
@@ -61,6 +131,9 @@ header {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p {
@@ -70,7 +143,7 @@ header {
 }
 
 .card.total {
-    background: #49aa26;
+    background: var(--green);
     color: white;
 }
 
@@ -78,21 +151,25 @@ header {
 #data-table {
     width: 100%;
     border-spacing: 0 0.5rem;
+    color: #969cb3;
 }
 
 table thead tr:first-child, table tbody td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
 }
 
-table th {
+table thead tr:last-child, table tbody td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
+table thead th {
     background: white;
     font-weight: normal;
     padding: 1rem 2rem;
     text-align: left;
-    color: #969cb3;
 }
 
-table tr {
+table tbody tr {
     opacity: 0.7;
 }
 
@@ -101,7 +178,7 @@ table tbody tr:hover {
 
 }
 
-table td {
+table tbody td {
     background: white;
     padding: 1rem 2rem;
     color: #969cb3;
@@ -116,9 +193,74 @@ td.income {
 }
 
 td.expense {
-    color: #e92929;
+    color: var(--red);
 }
 
+/* Modal */
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top:0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 999;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background: #f0f2f5;
+    padding: 2.4rem;
+    position: relative;
+    max-width: 500px;
+    width: 90%;
+    position: relative;
+    z-index: 1;
+    
+}
+
+/* form */
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+    padding: 0.8rem;
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
+}
 
 /* Footer */
 footer {
@@ -126,4 +268,17 @@ footer {
     padding: 4rem 0 2rem;
     color: var(--drak-blue);
     opacity: 0.6;
+}
+
+/* Responsive */
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
